[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/OptionMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/Winkle32.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Art/button_big_purple.png" type="Texture" id=3]
[ext_resource path="res://UI/VolumeSlider.gd" type="Script" id=4]

[node name="OptionMenu" type="Control"]
margin_left = -0.89093
margin_top = 0.629974
margin_right = 1024.11
margin_bottom = 602.63
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -144.603
margin_top = -143.51
margin_right = 105.397
margin_bottom = 156.49
size_flags_horizontal = 0
color = Color( 0.164706, 0.4, 0.466667, 0.745098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 20.0
custom_constants/separation = 89
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect/VBoxContainer"]
margin_right = 250.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.290196, 0.0862745, 0.32549, 1 )
text = "Options"
align = 1
valign = 1

[node name="VolumeSlider" type="HSlider" parent="ColorRect/VBoxContainer"]
margin_left = 25.0
margin_top = 115.0
margin_right = 225.0
margin_bottom = 131.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 4
max_value = 1.0
step = 0.05
script = ExtResource( 4 )

[node name="Label" type="Label" parent="ColorRect/VBoxContainer/VolumeSlider"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -47.0
margin_bottom = -4.0
rect_pivot_offset = Vector2( -650.006, -58 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.290196, 0.0862745, 0.32549, 1 )
text = "Volume"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="ColorRect/VBoxContainer/VolumeSlider"]
margin_left = -22.0
margin_top = 33.0
margin_right = 228.0
margin_bottom = 59.0
rect_pivot_offset = Vector2( -650.006, -58 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.290196, 0.0862745, 0.32549, 1 )
text = "Movement Cost"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="move_cost" type="TextEdit" parent="ColorRect/VBoxContainer/VolumeSlider"]
margin_left = 72.881
margin_top = 66.1781
margin_right = 122.881
margin_bottom = 96.1781
rect_min_size = Vector2( 50, 30 )
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="return" type="TextureButton" parent="ColorRect/VBoxContainer"]
margin_left = 25.0
margin_top = 220.0
margin_right = 225.0
margin_bottom = 270.0
rect_min_size = Vector2( 200, 50 )
size_flags_horizontal = 4
texture_normal = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="ColorRect/VBoxContainer/return"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.290196, 0.0862745, 0.32549, 1 )
text = "Return"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="value_changed" from="ColorRect/VBoxContainer/VolumeSlider" to="ColorRect/VBoxContainer/VolumeSlider" method="_on_VolumeSlider_value_changed"]
[connection signal="text_changed" from="ColorRect/VBoxContainer/VolumeSlider/move_cost" to="." method="_on_move_cost_text_changed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/return" to="." method="_on_return_pressed"]
